# NoKV

./: .coderabbit.yaml  .custom-gcl.yml  .dockerignore  .gitignore  .gitmodules  .golangci.yml  404.html  AGENTS.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_SUMMARY.md  Dockerfile  ISSUES.md  Makefile  QUICKSTART_DEV.md  README.md  SECURITY.md  architecture.html  bench_helpers_test.go  bench_util_test.go  book.toml  buf.gen.yaml  buf.yaml  cache.html  ccc-audit.html  cli.html  codecov.yml  compaction.html  config.html  control_and_execution_protocols.html  coordinator.html  coverage.out  cpu.pprof  cpu.prof  db.go  db_bench_test.go  db_close_test.go  (+245 more)
bench/: Cargo.toml
bench/agent-interface/: BENCHMARK_REPORT.md  README.md  base_profile.yaml
bench/drivers/: decompose.py  native_fsspec_bench.py  posix_bench.py  real_tools.py  schema.py
crates/nokv/: Cargo.toml
crates/nokv-agent/: Cargo.toml
crates/nokv-client/: Cargo.toml
crates/nokv-cluster/: Cargo.toml
crates/nokv-control/: Cargo.toml
crates/nokv-fuse/: Cargo.toml
crates/nokv-meta/: Cargo.toml
crates/nokv-object/: Cargo.toml
crates/nokv-python/: Cargo.toml  pyproject.toml
crates/nokv-server/: Cargo.toml
crates/nokv-types/: Cargo.toml
crates/nokvfs-cli/: Cargo.toml
crates/nokvfs-client/: Cargo.toml
crates/nokvfs-cluster/: Cargo.toml
crates/nokvfs-fuse/: Cargo.toml
crates/nokvfs-meta/: Cargo.toml
crates/nokvfs-object/: Cargo.toml
crates/nokvfs-protocol/: Cargo.toml
crates/nokvfs-server/: Cargo.toml
crates/nokvfs-types/: Cargo.toml
integrations/langgraph-checkpoint-nokv/: README.md  pyproject.toml
nokv-fs/: Cargo.toml
raftstore/: Cargo.toml  MAINLINE_PLAN.md  README.md  api.go  api_test.go  failpoint.go  failpoint_compat.go  raft_log_tracker.go  snapshot_resend.go  snapshot_resend_test.go  storage.go  store.go  store_test.go  test_helpers_test.go  wal_storage.go  wal_storage_test.go
raftstore-rs/: Cargo.toml  MAINLINE_PLAN.md  PARITY_PLAN.md  README.md
raftstore/admin/: client.go  client_test.go  doc.go  errors.go  service.go  service_test.go
raftstore/capsule/: wire.go  wire_test.go  witness.go  witness_test.go
raftstore/client/: capsule_witness.go  capsule_witness_test.go  client.go  client_kv.go  client_kv_test.go  client_route_cache.go  client_route_cache_test.go  client_test.go  client_transport.go  client_transport_test.go  doc.go  errors.go  errors_test.go  peras_witness.go  peras_witness_test.go  raftstore_rs_endpoint_test.go  read_options.go  read_options_test.go
raftstore/command/: codec.go  codec_test.go  doc.go  errors.go
raftstore/descriptor/: proto.go  types.go  types_test.go
raftstore/engine/: disk_storage.go  disk_storage_test.go  errors.go  snapshot.go  storage.go  wal_storage.go  wal_storage_test.go
raftstore/failpoints/: doc.go  failpoints.go  failpoints_test.go
raftstore/integration/: apply_observer_test.go  context_propagation_test.go  coordinator_degraded_test.go  deterministic_simulation_test.go  migration_flow_test.go  pd_degraded_test.go  restart_recovery_test.go  snapshot_interruption_test.go  split_merge_recovery_test.go  transport_chaos_test.go  twopc_fault_model_test.go
raftstore/kv/: applier.go  apply.go  apply_test.go  capsule_service.go  capsule_service_test.go  doc.go  errors.go  gc_plan.go  gc_plan_test.go  gc_policy.go  gc_policy_test.go  gc_txn_floor.go  gc_txn_floor_test.go  peras_fence.go  peras_install_apply.go  peras_segment_catalog.go  peras_segment_catalog_test.go  peras_segment_install.go  peras_segment_install_test.go  peras_service.go  peras_service_test.go  prepared_mvcc_install.go  service.go  service_test.go  watch.go  watch_test.go  write_batcher.go  write_batcher_test.go  write_fence.go
raftstore/localmeta/: doc.go  region_descriptor.go  region_descriptor_test.go  store.go  store_test.go  types.go  types_test.go
raftstore/meta/: store.go  store_test.go  types.go
raftstore/migrate/: admin_client.go  checkpoint.go  doc.go  expand.go  expand_test.go  init.go  init_test.go  integration_test.go  mode.go  plan.go  remove_peer.go  remove_peer_test.go  report.go  status.go  status_test.go  transfer_leader.go  transfer_leader_test.go  validation.go  workdir_mode.go
raftstore/mode/: mode.go
raftstore/mvcc/: doc.go  errors.go  lock_resolver.go  lock_resolver_test.go  orphan_default.go  orphan_default_test.go  plan.go  plan_test.go  planner.go  planner_test.go  policy.go  policy_test.go  proposer.go  txn_floor.go  txn_floor_test.go  worker.go  worker_test.go
raftstore/mvccgc/: plan.go  plan_test.go  policy.go  policy_test.go  txn_floor.go  txn_floor_test.go
raftstore/peer/: apply.go  bench_test.go  confchange.go  config.go  doc.go  errors.go  internal_helpers.go  peer.go  peer_bench_test.go  peer_internal_test.go  peer_test.go  proposal_batcher.go  proposal_batcher_test.go  raft_log_tracker.go  region_manager.go  region_manager_test.go  snapshot_payload_test.go  snapshot_resend.go  snapshot_resend_test.go  test_helpers_test.go
raftstore/peras/: authority_view.go  doc.go  errors.go  errors_test.go  install_request.go  metrics.go  wire.go  wire_test.go  witness.go  witness_log.go  witness_test.go
raftstore/raftlog/: db_log.go  db_log_test.go  disk_storage.go  disk_storage_test.go  doc.go  errors.go  snapshot.go  storage.go  wal_storage.go  wal_storage_test.go
raftstore/recovery/: types.go
raftstore/regionutil/: region.go
raftstore/registry/: registry.go
raftstore/scheduler/: coordinator.go  coordinator_test.go  planner.go  planner_test.go  types.go
raftstore/server/: config.go  doc.go  mvcc_maintenance.go  node.go  node_test.go  peer_builder.go  peer_builder_test.go  server.go  server_client_integration_test.go  server_test.go  tick_loop.go  tick_loop_test.go
raftstore/snapshot/: db_store.go  db_store_test.go  dir.go  doc.go  meta.go  payload.go  snapshot.go  snapshot_sst.go  snapshot_test.go  sst_files.go  sst_meta.go  sst_payload.go  sst_test.go  store.go  types.go
raftstore/stats/: doc.go  stats.go  stats_test.go
raftstore/store/: admin_ops.go  (+57 more)
(+2813 files in other folders)
