[workspace]
members = [
    "crates/nokv-types",
    "crates/nokv-protocol",
    "crates/nokv-meta",
    "crates/nokv-control",
    "crates/nokv-object",
    "crates/nokv-client",
    "crates/nokv-agent",
    "crates/nokv-fuse",
    "crates/nokv-server",
    "crates/nokv",
    "crates/nokv-python",
    "bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["The NoKV Authors"]
repository = "https://github.com/feichai0017/NoKV"
homepage = "https://nokv.io"

[workspace.dependencies]
nokv-types = { path = "crates/nokv-types", version = "0.1.0" }
nokv-protocol = { path = "crates/nokv-protocol", version = "0.1.0" }
nokv-meta = { path = "crates/nokv-meta", version = "0.1.0" }
nokv-control = { path = "crates/nokv-control", version = "0.1.0" }
nokv-object = { path = "crates/nokv-object", version = "0.1.0" }
nokv-client = { path = "crates/nokv-client", version = "0.1.0" }
nokv-agent = { path = "crates/nokv-agent", version = "0.1.0" }
nokv-fuse = { path = "crates/nokv-fuse", version = "0.1.0" }
nokv-server = { path = "crates/nokv-server", version = "0.1.0" }
nokv = { path = "crates/nokv", version = "0.1.0" }
nokv-python = { path = "crates/nokv-python", version = "0.1.0" }
nokv-bench = { path = "bench", version = "0.1.0" }
fuser = { version = "0.17.0", default-features = false }
holt = { version = "0.7.3", default-features = false }
etcd-client = { version = "0.19.0", default-features = false }
libc = "0.2"
opendal = { version = "0.57.0", default-features = false, features = ["blocking", "executors-tokio", "reqwest-rustls-tls", "services-s3"] }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
