[package]
name = "nokv-bench"
version = "0.1.0"
description = "NoKV system benchmark harness for metadata and AI training workloads."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokv-client.workspace = true
nokv-cluster.workspace = true
nokv-meta.workspace = true
nokv-object.workspace = true
nokv-server.workspace = true
nokv-types.workspace = true

[[bin]]
name = "nokv-bench"
path = "src/bin/nokv-bench.rs"
