[package]
name = "nokv-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NoKV agent tool surface: transport-free dispatch over the metadata namespace verbs."

[dependencies]
nokv-meta.workspace = true
nokv-object.workspace = true
nokv-types.workspace = true
serde_json.workspace = true
