[package]
name = "nokv-cluster"
version = "0.1.0"
description = "OpenRaft metadata replication boundary for NoKV."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokv-meta.workspace = true
nokv-protocol.workspace = true
nokv-types.workspace = true
openraft.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
