[package]
name = "nokv-meta"
version = "0.1.0"
description = "Holt-backed inode/dentry metadata service core for NoKV."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
holt.workspace = true
nokv-object.workspace = true
nokv-types.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
