[package]
name = "nokv-object"
version = "0.1.0"
description = "S3-compatible object body storage helpers for NoKV."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokv-types.workspace = true
opendal.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
