[package]
name = "nokv-python"
version = "0.1.0"
publish = false
description = "Python SDK and fsspec binding for NoKV AI training workflows."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
libc.workspace = true
nokv-client.workspace = true
nokv-meta.workspace = true
nokv-object.workspace = true
nokv-types.workspace = true
pyo3 = { version = "0.29.0", features = ["abi3-py39"] }
