[package]
name = "nokv-server"
version = "0.1.0"
description = "Long-running NoKV metadata server and framed RPC service."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
etcd = ["nokv-control/etcd"]

[dependencies]
nokv-control.workspace = true
nokv-meta.workspace = true
nokv-object.workspace = true
nokv-protocol.workspace = true
nokv-types.workspace = true
sha2.workspace = true

[dev-dependencies]
nokv-client.workspace = true
tempfile.workspace = true
