[package]
name = "nokv-types"
version = "0.1.0"
description = "Storage-neutral NoKV filesystem metadata model types."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "nokv_types"
path = "src/lib.rs"
