[package]
name = "nokvfs-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nokvfs-client.workspace = true
nokvfs-fuse.workspace = true
nokvfs-meta.workspace = true
nokvfs-object.workspace = true
nokvfs-types.workspace = true

[[bin]]
name = "nokv-fs"
path = "src/bin/nokv-fs.rs"
