[package]
name = "nokvfs-client"
version = "0.1.0"
description = "Rust SDK for local and remote NoKV metadata and object access."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokvfs-meta.workspace = true
nokvfs-object.workspace = true
nokvfs-protocol.workspace = true
nokvfs-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
