[package]
name = "nokvfs-client"
version = "0.1.0"
description = "Rust SDK for NoKV metadata and object access."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokvfs-meta.workspace = true
nokvfs-object.workspace = true
nokvfs-protocol.workspace = true
nokvfs-types.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
