[package]
name = "nokvfs-cluster"
version = "0.1.0"
description = "OpenRaft metadata replication boundary for NoKV-FS."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokvfs-meta.workspace = true
nokvfs-protocol.workspace = true
nokvfs-types.workspace = true
openraft.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
