[package]
name = "nokvfs-fuse"
version = "0.1.0"
description = "Low-level FUSE frontend for the NoKV filesystem."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fuser.workspace = true
nokvfs-meta.workspace = true
nokvfs-object.workspace = true
nokvfs-types.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
