[package]
name = "nokvfs-object"
version = "0.1.0"
description = "S3-compatible object body storage helpers for NoKV."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
opendal.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
