[package]
name = "nokvfs-protocol"
version = "0.1.0"
description = "Wire DTOs and binary framing for NoKV metadata RPC."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokvfs-types.workspace = true
rmp-serde.workspace = true
serde.workspace = true
