[package]
name = "nokvfs-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nokvfs-meta.workspace = true
nokvfs-object.workspace = true
nokvfs-types.workspace = true

[dev-dependencies]
tempfile.workspace = true
