[package]
name = "nokvfs-server"
version = "0.1.0"
description = "Long-running NoKV metadata server and framed RPC service."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nokvfs-meta.workspace = true
nokvfs-object.workspace = true
nokvfs-protocol.workspace = true
nokvfs-types.workspace = true

[dev-dependencies]
tempfile.workspace = true
