[package]
name = "yanex-agent-benchmark-harness"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]

[dependencies]
flate2 = "1"
nokvfs-client = { path = "../../../crates/nokvfs-client" }
nokvfs-meta = { path = "../../../crates/nokvfs-meta" }
nokvfs-object = { path = "../../../crates/nokvfs-object" }
nokvfs-types = { path = "../../../crates/nokvfs-types" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
walkdir = "2"
