[package]
name = "nokv-fs-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "nokv-fs"
path = "src/main.rs"

[dependencies]
nokv-fs-client.workspace = true
nokv-fs-holtstore = { path = "../holtstore" }
nokv-fs-metad.workspace = true
nokv-fs-model.workspace = true
nokv-fs-object.workspace = true
